--- a/libs/stylesheets/scss/style.scss
+++ b/libs/stylesheets/scss/style.scss
@@ -4,6 +4,7 @@ $primaryColor: #4996e8;
 $primaryAccentColor:  #fff;
 $secondaryColor: #f6f6f6;
 $secondaryAccentColor: #929292;
+$secondaryAccentDarkColor: #ebebeb;
 
 // CSS
 * {
@@ -44,4 +45,33 @@ body {
   background-color: $primaryAccentColor;
   border: none;
   margin: 30px 0px;
+}
+.tab-selector {
+  width: 150px;
+  height: 150px;
+  background-color: $secondaryAccentDarkColor;
+  color: $secondaryAccentColor;
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+}
+.tab-selector:active {
+  background-color: $primaryColor;
+  color: $primaryAccentColor;
+}
+.material-icons {
+  font-size: 100px !important;
+}
+.credential-dialog {
+  width: 300px;
+  margin: auto;
+  margin-top: 150px;
+}
+.register-user-icon {
+  right: 13px;
+  position: relative;
+}
+.tab-selector__block-label {
+  display: block;
 }
