--- a/libs/stylesheets/css/style.css
+++ b/libs/stylesheets/css/style.css
@@ -65,3 +65,37 @@ body {
 
 .tab-selector__block-label {
   display: block; }
+
+.credential-dialog__tab-content {
+  display: none;
+  -webkit-animation: fadeEffect 1s;
+  animation: fadeEffect 1s; }
+
+@-webkit-keyframes fadeEffect {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@keyframes fadeEffect {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+.credential-dialog__tab-link {
+  text-decoration: none; }
+
+.credential-dialog__tab-link:hover .tab-selector {
+  background-color: #d6d6d6;
+  color: #7a7a7a; }
+
+.credential-dialog__tab-link.active .tab-selector {
+  background-color: #4996e8;
+  color: #fff;
+  -webkit-animation: fadeEffect 1s;
+  animation: fadeEffect 1s; }
+
+.credential-dialog__tab-link:focus .tab-selector {
+  background-color: #4996e8;
+  color: #fff; }
