--- a/libs/stylesheets/scss/style.scss
+++ b/libs/stylesheets/scss/style.scss
@@ -75,3 +75,35 @@ body {
 .tab-selector__block-label {
   display: block;
 }
+.credential-dialog__tab-content {
+    display: none;
+    -webkit-animation: fadeEffect 1s;
+    animation: fadeEffect 1s;
+}
+// Animation effect for switching tabs
+@-webkit-keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+// Animation CSS ends here
+.credential-dialog__tab-link {
+  text-decoration: none;
+}
+.credential-dialog__tab-link:hover .tab-selector{
+  background-color: #d6d6d6;
+  color: #7a7a7a;
+}
+.credential-dialog__tab-link.active .tab-selector {
+  background-color: $primaryColor;
+  color: $primaryAccentColor;
+  -webkit-animation: fadeEffect 1s;
+  animation: fadeEffect 1s;
+}
+.credential-dialog__tab-link:focus .tab-selector {
+  background-color: $primaryColor;
+  color: $primaryAccentColor;
+}
