--- a/libs/stylesheets/css/style.css
+++ b/libs/stylesheets/css/style.css
@@ -3,7 +3,7 @@
   padding: 0px; }
 
 body {
-  background-color: #f6f6f6; }
+  font-family: "Cabin", "Source Sans Pro", "Ubuntu Condensed", sans-serif; }
 
 .background-cover-image {
   background-image: url(../../../resources/images/cycles.jpg);
@@ -14,7 +14,6 @@ body {
   height: 100%; }
 
 .logon-screen-half {
-  background: url(images/bg-2.jpg);
   width: 50%;
   position: absolute;
   right: 0px;
@@ -24,6 +23,8 @@ body {
   height: 40px;
   width: 100%;
   display: block;
+  font-size: 18px;
+  font-family: "Cabin", "Source Sans Pro", "Ubuntu Condensed", sans-serif;
   background-color: #4996e8;
   color: #fff;
   border: none; }
@@ -35,7 +36,11 @@ body {
   color: #929292;
   background-color: #fff;
   border: none;
-  margin: 30px 0px; }
+  margin: 30px 0px;
+  padding-left: 10px; }
+
+.material-textfield:focus {
+  outline: 0; }
 
 .tab-selector {
   width: 150px;
@@ -57,7 +62,7 @@ body {
 .credential-dialog {
   width: 300px;
   margin: auto;
-  margin-top: 150px; }
+  margin-top: 100px; }
 
 .register-user-icon {
   right: 13px;
@@ -99,3 +104,66 @@ body {
 .credential-dialog__tab-link:focus .tab-selector {
   background-color: #4996e8;
   color: #fff; }
+
+.material-input-group {
+  position: relative;
+  margin: 30px 0px; }
+
+.material-input-group__text-field {
+  color: #929292;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+  font-size: 18px;
+  font-family: "Cabin", "Source Sans Pro", "Ubuntu Condensed", sans-serif;
+  padding-left: 5px;
+  padding-top: 10px;
+  display: block;
+  height: 40px;
+  width: 100%; }
+
+.material-input-group__text-field:focus {
+  outline: none; }
+
+.material-input-group__label {
+  color: #aaaaaa;
+  font-size: 14px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 5px;
+  top: 14px;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all; }
+
+.material-input-group__text-field:focus ~ .material-input-group__label,
+.material-input-group__text-field:valid ~ .material-input-group__label {
+  top: -5px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #4996e8; }
+
+.material-input-group__animated-bar {
+  position: relative;
+  display: block;
+  width: 100%; }
+
+.material-input-group__animated-bar:before, .material-input-group__animated-bar:after {
+  content: '';
+  height: 2px;
+  width: 0;
+  bottom: 1px;
+  position: absolute;
+  background: #4996e8;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all; }
+
+.material-input-group__animated-bar:before {
+  left: 50%; }
+
+.material-input-group__animated-bar:after {
+  right: 50%; }
+
+.material-input-group__text-field:focus ~ .material-input-group__animated-bar:before, .material-input-group__text-field:focus ~ .material-input-group__animated-bar:after {
+  width: 50%; }
