--- a/libs/stylesheets/css/style.css
+++ b/libs/stylesheets/css/style.css
@@ -19,16 +19,6 @@ body {
   right: 0px;
   height: 100%; }
 
-.material-button {
-  height: 40px;
-  width: 100%;
-  display: block;
-  font-size: 18px;
-  font-family: "Cabin", "Source Sans Pro", "Ubuntu Condensed", sans-serif;
-  background-color: #4996e8;
-  color: #fff;
-  border: none; }
-
 .material-textfield {
   height: 40px;
   width: 100%;
@@ -42,6 +32,9 @@ body {
 .material-textfield:focus {
   outline: 0; }
 
+.raised, .tab-selector, .material-button {
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
+
 .tab-selector {
   width: 150px;
   height: 150px;
@@ -49,8 +42,7 @@ body {
   color: #929292;
   display: table-cell;
   vertical-align: middle;
-  text-align: center;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
+  text-align: center; }
 
 .tab-selector:active {
   background-color: #4996e8;
@@ -167,3 +159,66 @@ body {
 
 .material-input-group__text-field:focus ~ .material-input-group__animated-bar:before, .material-input-group__text-field:focus ~ .material-input-group__animated-bar:after {
   width: 50%; }
+
+.material-button {
+  -webkit-appearance: none;
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 40px;
+  background: #4996e8;
+  color: #fff;
+  font: inherit;
+  font-size: 18px;
+  border: none;
+  transition: all 0.2s ease;
+  cursor: pointer; }
+  .material-button:hover, .material-button:focus {
+    background-color: #3289e5;
+    outline: 0;
+    text-decoration: none; }
+
+.material-button--primary {
+  color: #fff;
+  background-color: #4996e8; }
+  .material-button--primary:hover {
+    background-color: #3289e5; }
+
+.material-button--secondary {
+  color: #929292;
+  background-color: #ebebeb; }
+  .material-button--secondary:hover {
+    background-color: #dedede; }
+
+/********/
+.material-button-ripple {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: transparent; }
+
+.material-button-ripple__circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  width: 0;
+  height: 0;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.25); }
+  .material-button-ripple.is-active .material-button-ripple__circle {
+    animation: animate-ripple .4s ease-in; }
+
+@keyframes animate-ripple {
+  0% {
+    opacity: 0; }
+  25% {
+    opacity: 1; }
+  100% {
+    width: 200%;
+    padding-bottom: 200%;
+    opacity: 0; } }
