--- a/libs/stylesheets/css/style.css
+++ b/libs/stylesheets/css/style.css
@@ -97,6 +97,15 @@ body {
   background-color: #4996e8;
   color: #fff; }
 
+.forgot-password {
+  color: #4996e8;
+  font-size: 12px;
+  text-align: center;
+  display: block;
+  padding-bottom: 20px;
+  margin-top: -10px;
+  text-decoration: none; }
+
 .material-input-group {
   position: relative;
   margin: 30px 0px; }
