--- a/libs/stylesheets/scss/style.scss
+++ b/libs/stylesheets/scss/style.scss
@@ -109,6 +109,15 @@ body {
   background-color: $primaryColor;
   color: $primaryAccentColor;
 }
+.forgot-password{
+    color: $primaryColor;
+    font-size: 12px;
+    text-align: center;
+    display: block;
+    padding-bottom: 20px;
+    margin-top: -10px;
+    text-decoration: none;
+}
 // CSS for material like textfield
 .material-input-group { 
   position: relative; 
