--- a/libs/stylesheets/css/style.css
+++ b/libs/stylesheets/css/style.css
@@ -9,15 +9,21 @@ body {
   background-image: url(../../../resources/images/cycles.jpg);
   background-size: cover;
   width: 50%;
-  position: absolute;
+  position: fixed;
   left: 0px;
   height: 100%; }
+  @media screen and (max-width: 680px) {
+    .background-cover-image {
+      display: none; } }
 
 .logon-screen-half {
   width: 50%;
   position: absolute;
   right: 0px;
   height: 100%; }
+  @media screen and (max-width: 680px) {
+    .logon-screen-half {
+      width: 100%; } }
 
 .material-textfield {
   height: 40px;
@@ -102,7 +108,6 @@ body {
   font-size: 12px;
   text-align: center;
   display: block;
-  padding-bottom: 20px;
   margin-top: -10px;
   text-decoration: none; }
 
@@ -138,11 +143,19 @@ body {
   -webkit-transition: 0.2s ease all; }
 
 .material-input-group__text-field:focus ~ .material-input-group__label,
-.material-input-group__text-field:valid ~ .material-input-group__label {
+.material-input-group__text-field:valid ~ .material-input-group__label,
+.material-input-group__text-field.used:invalid ~ .material-input-group__label {
   top: -5px;
   font-size: 14px;
   font-weight: bold;
   color: #4996e8; }
+
+.material-input-group__text-field.used:invalid ~ .material-input-group__label {
+  color: red; }
+
+.material-input-group__text-field.used:invalid + .material-input-group__animated-bar:before,
+.material-input-group__text-field.used:invalid + .material-input-group__animated-bar:after {
+  background: red; }
 
 .material-input-group__animated-bar {
   position: relative;
@@ -166,7 +179,8 @@ body {
 .material-input-group__animated-bar:after {
   right: 50%; }
 
-.material-input-group__text-field:focus ~ .material-input-group__animated-bar:before, .material-input-group__text-field:focus ~ .material-input-group__animated-bar:after {
+.material-input-group__text-field:focus ~ .material-input-group__animated-bar:before,
+.material-input-group__text-field:focus ~ .material-input-group__animated-bar:after {
   width: 50%; }
 
 .material-button {
@@ -175,6 +189,7 @@ body {
   display: block;
   width: 100%;
   height: 40px;
+  margin: 20px 0;
   background: #4996e8;
   color: #fff;
   font: inherit;
