--- a/libs/stylesheets/scss/style.scss
+++ b/libs/stylesheets/scss/style.scss
@@ -4,6 +4,7 @@ $primaryColor: #4996e8;
 $primaryAccentColor:  #fff;
 $secondaryColor: #ebebeb;
 $secondaryAccentColor: #929292;
+$errorColor: red;
 
 // Fonts used
 // For title, heading using sans-serif Fonts
@@ -22,16 +23,23 @@ body {
   background-image: url(../../../resources/images/cycles.jpg);
   background-size: cover;
   width: 50%;
-  position: absolute;
+  position: fixed;
   left: 0px;
   height: 100%;
+  @media screen and (max-width: 680px){
+    display: none;
+  }
 }
 .logon-screen-half {
   width: 50%;
   position: absolute;
   right: 0px;
   height: 100%;
+  @media screen and (max-width: 680px){
+    width: 100%;
   }
+}
+
 .material-textfield {
   height: 40px;
   width: 100%;
@@ -114,7 +122,6 @@ body {
     font-size: 12px;
     text-align: center;
     display: block;
-    padding-bottom: 20px;
     margin-top: -10px;
     text-decoration: none;
 }
@@ -151,11 +158,19 @@ body {
   -webkit-transition: 0.2s ease all;
 }
 .material-input-group__text-field:focus ~ .material-input-group__label, 
-.material-input-group__text-field:valid ~ .material-input-group__label {
+.material-input-group__text-field:valid ~ .material-input-group__label,
+.material-input-group__text-field.used:invalid ~ .material-input-group__label {
   top: -5px;
   font-size: 14px;
   font-weight: bold;
   color: $primaryColor;
+}
+.material-input-group__text-field.used:invalid ~ .material-input-group__label {
+  color: $errorColor;
+}
+.material-input-group__text-field.used:invalid + .material-input-group__animated-bar:before,
+.material-input-group__text-field.used:invalid + .material-input-group__animated-bar:after {
+  background: $errorColor;
 }
 .material-input-group__animated-bar {
   position: relative;
@@ -179,7 +194,8 @@ body {
 .material-input-group__animated-bar:after {
   right:50%; 
 }
-.material-input-group__text-field:focus ~ .material-input-group__animated-bar:before, .material-input-group__text-field:focus ~ .material-input-group__animated-bar:after {
+.material-input-group__text-field:focus ~ .material-input-group__animated-bar:before, 
+.material-input-group__text-field:focus ~ .material-input-group__animated-bar:after {
   width:50%;
 }
 
@@ -190,6 +206,7 @@ body {
   display: block; //To spread the button across full width
   width: 100%;
   height: 40px;
+  margin: 20px 0;
   background: $primaryColor;
   color: $primaryAccentColor;
   font: inherit;
