--- a/libs/stylesheets/css/style.css
+++ b/libs/stylesheets/css/style.css
@@ -98,6 +98,8 @@
     color: #4996e8; }
   .material-input-group__text-field.used:invalid ~ .material-input-group__label {
     color: red; }
+  .material-input-group__text-field.used:invalid ~ .material-input-group__error {
+    display: block; }
   .material-input-group__text-field.used:invalid + .material-input-group__animated-bar:before,
   .material-input-group__text-field.used:invalid + .material-input-group__animated-bar:after {
     background: red; }
@@ -116,6 +118,14 @@
   transition: 0.2s ease all;
   -moz-transition: 0.2s ease all;
   -webkit-transition: 0.2s ease all; }
+
+.material-input-group__error {
+  display: none;
+  color: red;
+  position: absolute;
+  font-size: 12px;
+  bottom: -20px;
+  padding-left: 5px; }
 
 .material-button--primary {
   color: #fff;
@@ -156,6 +166,11 @@ body {
   @media screen and (max-width: 680px) {
     .logon-screen-half {
       width: 100%; } }
+
+.logon-screen__logo {
+  display: block;
+  margin: auto;
+  padding-top: 30px; }
 
 .raised, .material-button, .tab-selector {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
@@ -200,7 +215,7 @@ body {
 .credential-dialog {
   width: 300px;
   margin: auto;
-  margin-top: 100px; }
+  margin-top: 50px; }
 
 .credential-dialog__tab-content {
   display: none;
@@ -219,7 +234,7 @@ body {
   to {
     opacity: 1; } }
 
-.forgot-password {
+.small-link-primary {
   color: #4996e8;
   font-size: 12px;
   text-align: center;
