--- a/libs/stylesheets/scss/_material-textfield.scss
+++ b/libs/stylesheets/scss/_material-textfield.scss
@@ -51,6 +51,9 @@
   &.used:invalid ~ .material-input-group__label {
     color: $color-error;
   }
+  &.used:invalid ~ .material-input-group__error{
+    display: block;
+  }
   &.used:invalid + .material-input-group__animated-bar:before,
   &.used:invalid + .material-input-group__animated-bar:after {
     background: $color-error;
@@ -71,4 +74,12 @@
   transition: 0.2s ease all; 
   -moz-transition: 0.2s ease all; 
   -webkit-transition: 0.2s ease all;
+}
+.material-input-group__error {
+  display: none;
+  color: $color-error;
+  position: absolute;
+  font-size: $font-small;
+  bottom: -20px;
+  padding-left: 5px;
 }
