--- a/libs/stylesheets/scss/utilities/_variables.scss
+++ b/libs/stylesheets/scss/utilities/_variables.scss
@@ -1,6 +1,6 @@
 /*****ALL THE VARIABLES ARE DEFINED HERE*****/
 // Theme colors
-$color-primary: #4996e8;
+$color-primary: #00AEC5;
 $color-primary-accent:  #fff;
 
 $color-secondary: #ebebeb;
